[package]
name = "axum-rate-limiter"
version = "0.1.0"
edition = "2024"

[dependencies]
axum.workspace = true
jiff.workspace = true
tracing.workspace = true
axum-client-ip = "1.3.1"
surrealdb = { workspace = true, optional = true }
redis = { workspace = true, optional = true }

[features]
default = []
surrealdb = ["dep:surrealdb"]
redis = ["dep:redis"]
