[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum.workspace = true
tokio.workspace = true
jiff.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3.23"

surrealdb = { workspace = true, optional = true }
redis = { workspace = true, optional = true }

axum-rate-limiter = { path = "../lib", default-features = false }

[features]
default = []
all = ["surrealdb", "redis"]
surrealdb = ["dep:surrealdb", "axum-rate-limiter/surrealdb"]
redis = ["dep:redis", "axum-rate-limiter/redis"]
